--- a/_posts/0000-01-02-hmobius.md
+++ b/_posts/0000-01-02-hmobius.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Oh well, live like there's no tomorrow!
 Use the left arrow to go back!
